--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,33 +26,44 @@ concurrency:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "deploy"
-  deploy:
-    # The type of runner that the job will run on
+  build:
+    name: Build
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-      # Set up Node
-      - name: Set up Node
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Setup Node
         uses: actions/setup-node@v3
-        with:
-          node-version: v20.10.0
-          cache: 'npm'
+
       - name: Install dependencies
-        run: npm install
-      - name: Build
+        uses: npm-install@v1
+
+      - name: Build project
         run: npm run build
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+
+      - name: Upload production-ready build files
+        uses: actions/upload-artifact@v3
         with:
-          # Upload dist repository
           name: production-files
           path: ./dist
+
+  deploy:
+      name: Deploy
+      needs: build
+      runs-on: ubuntu-latest
+      if: github.ref == 'refs/heads/main'
+
+      steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: production-files
+          path: ./dist
+
       - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v2
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist      
